# reminisce

./: .gitignore  Cargo.toml  justfile  reminisce.example.json
migrations/: 20240607063906_init_database.sql
src/: configuration.rs  database.rs  encryption.rs  health.rs  llm.rs  main.rs  queue.rs  recorder.rs
src/image_processing/: embeddings.rs  llm.rs  mod.rs  ocr.rs  similarity.rs
